--- a/index.html
+++ b/index.html
@@ -4,19 +4,28 @@
     <meta charset="UTF-8" />
     <meta name="description" content="Help for improving your business" />
     <title>WebStudio</title>
+    <link rel="stylesheet" href="./css/styles.css" />
+    <link rel="preconnect" href="https://fonts.googleapis.com" />
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
+    <link
+      href="https://fonts.googleapis.com/css2?family=Raleway:wght@800&family=Roboto:wght@400;500;700;900&display=swap"
+      rel="stylesheet"
+    />
   </head>
   <body>
     <header>
       <nav>
-        <a href="./index.html"> WebStudio </a>
-        <ul>
-          <li><a href="">Studio</a></li>
-          <li><a href="">Portfolio</a></li>
+        <a href="./index.html"
+          ><span class="logo">Web</span><span class="logo-top">Studio</span></a
+        >
+        <ul class="nav">
+          <li><a href="./index.html">Studio</a></li>
+          <li><a href="./portfolio.html">Portfolio</a></li>
           <li><a href="">Contacts</a></li>
         </ul>
       </nav>
       <address>
-        <ul>
+        <ul class="address">
           <li>
             <a href="mailto:info@devstudio.com">info@devstudio.com</a>
           </li>
@@ -26,14 +35,14 @@
         </ul>
       </address>
     </header>
-    <main>
-      <section>
+    <main class="content">
+      <section class="hero-image">
         <h1>Effective Solutions for Your Business</h1>
         <button type="button">Order Service</button>
       </section>
       <section>
         <h2>Lorem, ipsum dolor.</h2>
-        <ul>
+        <ul class="card">
           <li>
             <h3>Strategy</h3>
             <p>
@@ -78,9 +87,9 @@
           </li>
         </ul>
       </section>
-      <section>
+      <section class="team">
         <h2>Our Team</h2>
-        <ul>
+        <ul class="card">
           <li>
             <img
               src="./images/mark_guerrero.jpg"
@@ -116,12 +125,15 @@
         </ul>
       </section>
     </main>
-    <footer>
-      <a href="./index.html"> WebStudio </a>
+    <footer class="foo">
+      <a href="./index.html"
+        ><span class="logo">Web</span><span class="logo-footer">Studio</span></a
+      >
       <p>
         Increase the flow of customers and sales for your business with digital
         marketing & growth solutions.
       </p>
     </footer>
+  </body>
   </body>
 </html>
