--- a/portfolio.html
+++ b/portfolio.html
@@ -15,166 +15,157 @@
   <body>
     <header>
       <nav>
-        <a href="./index.html"
-          ><span class="logo">Web</span><span class="logo-top">Studio</span></a
+        <a href="./index.html" class="logo link"
+          >Web<span class="studio">Studio</span></a
         >
-        <ul class="nav">
-          <li><a href="./index.html">Studio</a></li>
-          <li><a href="./portfolio.html">Portfolio</a></li>
-          <li><a href="">Contacts</a></li>
+        <ul class="list">
+          <li><a href="./index.html" class="nav link">Studio</a></li>
+          <li><a href="./portfolio.html" class="nav link">Portfolio</a></li>
+          <li><a href="" class="nav link">Contacts</a></li>
         </ul>
       </nav>
-      <address>
-        <ul class="address">
+      <address class="address">
+        <ul class="list">
           <li>
-            <a href="mailto:info@devstudio.com">info@devstudio.com</a>
+            <a href="mailto:info@devstudio.com" class="contacts link"
+              >info@devstudio.com</a
+            >
           </li>
           <li>
-            <a href="tel:+110001111111">+11 (000) 111-11-11</a>
+            <a href="tel:+110001111111" class="contacts link"
+              >+11 (000) 111-11-11</a
+            >
           </li>
         </ul>
       </address>
     </header>
     <main>
       <section>
-        <ul class="filter">
-          <li><button type="button">All</button></li>
-          <li><button type="button">Web Site</button></li>
-          <li><button type="button">App</button></li>
-          <li><button type="button">Design</button></li>
-          <li><button type="button">Marketing</button></li>
+        <h1>Lorem ipsum dolor sit amet.</h1>
+        <ul class="list">
+          <li><button type="button" class="filter">All</button></li>
+          <li><button type="button" class="filter">Web Site</button></li>
+          <li><button type="button" class="filter">App</button></li>
+          <li><button type="button" class="filter">Design</button></li>
+          <li><button type="button" class="filter">Marketing</button></li>
         </ul>
-      </section>
-      <section>
-        <ul class="card">
+        <ul class="list">
           <li>
-            <ul>
-              <li>
-                <a href="">
-                  <img
-                    src="./images/bank.jpg"
-                    alt="Banking App"
-                    width="360"
-                    height="300"
-                  />
-                  <h3>Banking App Interface Concept</h3>
-                  <p>App</p>
-                </a>
-              </li>
-              <li>
-                <a href="">
-                  <img
-                    src="./images/payments.jpg"
-                    alt="Payment"
-                    width="360"
-                    height="300"
-                  />
-                  <h3>Cashless Payment</h3>
-                  <p>Marketing</p>
-                </a>
-              </li>
-              <li>
-                <a href="">
-                  <img
-                    src="./images/meditation.jpg"
-                    alt="Meditation App"
-                    width="360"
-                    height="300"
-                  />
-                  <h3>Meditation App</h3>
-                  <p>App</p>
-                </a>
-              </li>
-            </ul>
+            <a href="" class="link">
+              <img
+                src="./images/bank.jpg"
+                alt="Banking App"
+                width="360"
+                height="300"
+              />
+              <h3 class="item-title">Banking App Interface Concept</h3>
+              <p class="item-text">App</p>
+            </a>
           </li>
           <li>
-            <ul>
-              <li>
-                <a href="">
-                  <img
-                    src="./images/taxi.jpg"
-                    alt="Taxi Service"
-                    width="360"
-                    height="300"
-                  />
-                  <h3>Taxi Service</h3>
-                  <p>Marketing</p>
-                </a>
-              </li>
-              <li>
-                <a href="">
-                  <img
-                    src="./images/screen.jpg"
-                    alt="Screen Illustrations"
-                    width="360"
-                    height="300"
-                  />
-                  <h3>Screen Illustrations</h3>
-                  <p>Design</p>
-                </a>
-              </li>
-              <li>
-                <a href="">
-                  <img
-                    src="./images/courses.jpg"
-                    alt="Online Courses"
-                    width="360"
-                    height="300"
-                  />
-                  <h3>Online Courses</h3>
-                  <p>Marketing</p>
-                </a>
-              </li>
-            </ul>
+            <a href="" class="link">
+              <img
+                src="./images/payments.jpg"
+                alt="Payment"
+                width="360"
+                height="300"
+              />
+              <h3 class="item-title">Cashless Payment</h3>
+              <p class="item-text">Marketing</p>
+            </a>
           </li>
           <li>
-            <ul>
-              <li>
-                <a href="">
-                  <img
-                    src="./images/stories.jpg"
-                    alt="Instagram Stories Concept"
-                    width="360"
-                    height="300"
-                  />
-                  <h3>Instagram Stories Concept</h3>
-                  <p>Design</p>
-                </a>
-              </li>
-              <li>
-                <a href="">
-                  <img
-                    src="./images/food.jpg"
-                    alt="Organic Food"
-                    width="360"
-                    height="300"
-                  />
-                  <h3>Organic Food</h3>
-                  <p>Web Site</p>
-                </a>
-              </li>
-              <li>
-                <a href="">
-                  <img
-                    src="./images/coffee.jpg"
-                    alt="Fresh Coffee"
-                    width="360"
-                    height="300"
-                  />
-                  <h3>Fresh Coffee</h3>
-                  <p>Web Site</p>
-                </a>
-              </li>
-            </ul>
+            <a href="" class="link">
+              <img
+                src="./images/meditation.jpg"
+                alt="Meditation App"
+                width="360"
+                height="300"
+              />
+              <h3 class="item-title">Meditation App</h3>
+              <p class="item-text">App</p>
+            </a>
+          </li>
+          <li>
+            <a href="" class="link">
+              <img
+                src="./images/taxi.jpg"
+                alt="Taxi Service"
+                width="360"
+                height="300"
+              />
+              <h3 class="item-title">Taxi Service</h3>
+              <p class="item-text">Marketing</p>
+            </a>
+          </li>
+          <li>
+            <a href="" class="link">
+              <img
+                src="./images/screen.jpg"
+                alt="Screen Illustrations"
+                width="360"
+                height="300"
+              />
+              <h3 class="item-title">Screen Illustrations</h3>
+              <p class="item-text">Design</p>
+            </a>
+          </li>
+          <li>
+            <a href="" class="link">
+              <img
+                src="./images/courses.jpg"
+                alt="Online Courses"
+                width="360"
+                height="300"
+              />
+              <h3 class="item-title">Online Courses</h3>
+              <p class="item-text">Marketing</p>
+            </a>
+          </li>
+          <li>
+            <a href="" class="link">
+              <img
+                src="./images/stories.jpg"
+                alt="Instagram Stories Concept"
+                width="360"
+                height="300"
+              />
+              <h3 class="item-title">Instagram Stories Concept</h3>
+              <p class="item-text">Design</p>
+            </a>
+          </li>
+          <li>
+            <a href="" class="link">
+              <img
+                src="./images/food.jpg"
+                alt="Organic Food"
+                width="360"
+                height="300"
+              />
+              <h3 class="item-title">Organic Food</h3>
+              <p class="item-text">Web Site</p>
+            </a>
+          </li>
+          <li>
+            <a href="" class="link">
+              <img
+                src="./images/coffee.jpg"
+                alt="Fresh Coffee"
+                width="360"
+                height="300"
+              />
+              <h3 class="item-title">Fresh Coffee</h3>
+              <p class="item-text">Web Site</p>
+            </a>
           </li>
         </ul>
       </section>
     </main>
     <footer class="foo">
-      <a href="./index.html"
-        ><span class="logo">Web</span><span class="logo-footer">Studio</span></a
+      <a href="./index.html" class="logo link"
+        >Web<span class="studio">Studio</span></a
       >
-      <p>
+      <p class="foo-text">
         Increase the flow of customers and sales for your business with digital
         marketing & growth solutions.
       </p>
