Update index.html, portfolio.html, styles.css

--- a/index.html
+++ b/index.html
@@ -42,7 +42,7 @@
     <main class="content">
       <section class="hero-image">
         <h1 class="title">Effective Solutions for Your Business</h1>
-        <button type="button" class="order">Order Service</button>
+        <button type="button" class="serv">Order Service</button>
       </section>
       <section>
         <h2>Lorem, ipsum dolor.</h2>
@@ -103,12 +103,12 @@
             <h3 class="item-title">Mark Guerrero</h3>
             <p class="item-text">Product Designer</p>
           </li>
-          <li>
+          <li class="member">
             <img src="./images/tom_ford.jpg" alt="Tom Ford" width="264" />
             <h3 class="item-title">Tom Ford</h3>
             <p class="item-text">Frontend Developer</p>
           </li>
-          <li>
+          <li class="member">
             <img
               src="./images/camila_garcia.jpg"
               alt="Camila Garcia"
@@ -117,7 +117,7 @@
             <h3 class="item-title">Camila Garcia</h3>
             <p class="item-text">Marketing</p>
           </li>
-          <li>
+          <li class="member">
             <img
               src="./images/daniel_wilson.jpg"
               alt="Daniel Wilson"
